# face-attendance-system

./: .dockerignore  .gitignore  Dockerfile  attendance.db  database.py  face_utils.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
static/css/: style.css
static/js/: camera.js
templates/: base.html  index.html  punch_in.html  register.html  sheet.html
